--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-hook-form": "^7.53.1",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.27.0",
+    "react-toastify": "^10.0.6",
     "styled-components": "^6.1.13",
     "zustand": "^5.0.0"
   },
